--- a/src/components/HeaderMenu/index.scss
+++ b/src/components/HeaderMenu/index.scss
@@ -47,3 +47,58 @@
     gap: 10px;
   }
 }
+
+
+
+
+@media (max-width: 480px) {
+  .header__menu {
+    padding: 2px 6px;
+    background-color: $header-background;
+    padding: 50px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: $white;
+  
+    &-logo {
+      
+      
+    
+    }
+  
+    .header-menu__logo {
+      position: relative;
+      bottom: 40px;
+      left: 150px;
+
+    }
+  
+    .header-menu__cart {
+      width: 70px;
+      height: 65px;
+      cursor: pointer;
+    }
+  
+    ul {  
+      display: flex;
+      list-style-type: none;
+      column-gap: 48px;
+      flex-grow: 1;
+      padding-left: 70px;
+      font-size: 22px;
+      line-height: 26px;
+      justify-content: center;
+      cursor: pointer;
+    }
+  
+  
+    &__cart-shop {
+      display: flex;
+      gap: 10px;
+    }
+  }
+
+
+}
